shipments/.deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipments-service
spec:
  selector:
    app: shipments
  ports:
    - protocol: TCP
      port: 7002
      targetPort: 8081
